logs/django-locking.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appconf'...
Listing './lib/python3.5/site-packages/django_appconf-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/django_locking-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/django_staticfiles-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/locking'...
Listing './lib/python3.5/site-packages/locking/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/staticfiles'...
Compiling './lib/python3.5/site-packages/staticfiles/finders.py'...
***   File "./lib/python3.5/site-packages/staticfiles/finders.py", line 267
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/staticfiles/handlers.py'...
***   File "./lib/python3.5/site-packages/staticfiles/handlers.py", line 58
    except Http404, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/staticfiles/management'...
Listing './lib/python3.5/site-packages/staticfiles/management/commands'...
Compiling './lib/python3.5/site-packages/staticfiles/management/commands/runserver.py'...
***   File "./lib/python3.5/site-packages/staticfiles/management/commands/runserver.py", line 86
    print "Validating models..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/staticfiles/templatetags'...
Listing './lib/python3.5/site-packages/staticfiles/tests'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/no_label'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/no_label/static'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/skip'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/skip/static'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/skip/static/skip'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/test'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/test/otherdir'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/test/static'...
Listing './lib/python3.5/site-packages/staticfiles/tests/apps/test/static/test'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/cached'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/cached/css'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/cached/css/fonts'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/cached/css/img'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/cached/img'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/ignored'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/subdir'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/documents/test'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/prefixed'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/site_media'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/site_media/media'...
Listing './lib/python3.5/site-packages/staticfiles/tests/project/templates'...
Compiling './lib/python3.5/site-packages/staticfiles/tests/tests.py'...
***   File "./lib/python3.5/site-packages/staticfiles/tests/tests.py", line 215
    except IndexError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/staticfiles/tests/urls'...
Listing './share'...
Listing './share/python-wheels'...
